--- a/PM25-Sever/HomePage.ui
+++ b/PM25-Sever/HomePage.ui
@@ -13,17 +13,215 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <property name="styleSheet">
+   <string notr="true">QWidget{font-size: 15pt;}</string>
+  </property>
+  <widget class="QPushButton" name="btn_set">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>500</y>
+     <width>121</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>设置</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>140</y>
-     <width>54</width>
-     <height>12</height>
+     <y>10</y>
+     <width>100</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>是否采集：</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>100</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设备编号：</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_result_one">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>10</y>
+     <width>160</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>111111111111111111111</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_acquisitionInterval_one">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>10</y>
+     <width>80</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>1s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>2s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>3s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>4s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>6s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>7s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>8s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>9s</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>10s</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_num_one">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>10</y>
+     <width>20</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>1</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>10</y>
+     <width>100</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>采集间隔：</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_set_one">
+   <property name="geometry">
+    <rect>
+     <x>830</x>
+     <y>15</y>
+     <width>101</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设定</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>10</y>
+     <width>60</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>浓度：</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_isWork_one">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>10</y>
+     <width>50</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_isOnline_one">
+   <property name="geometry">
+    <rect>
+     <x>1000</x>
+     <y>10</y>
+     <width>121</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设备已掉线</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
  </widget>
