--- a/PM25-Sever/MainWindow.ui
+++ b/PM25-Sever/MainWindow.ui
@@ -31,6 +31,9 @@
       <height>74</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{font-size: 20pt;}</string>
+    </property>
     <property name="text">
      <string>主页</string>
     </property>
@@ -43,6 +46,9 @@
       <width>120</width>
       <height>74</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{font-size: 20pt;}</string>
     </property>
     <property name="text">
      <string>曲线图</string>
@@ -57,8 +63,11 @@
       <height>74</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{font-size: 20pt;}</string>
+    </property>
     <property name="text">
-     <string>导出</string>
+     <string>导出数据</string>
     </property>
    </widget>
    <widget class="Line" name="line">
