--- a/PM25-Sever/MainWindow.ui
+++ b/PM25-Sever/MainWindow.ui
@@ -32,7 +32,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{font-size: 20pt;}</string>
+     <string notr="true">QPushButton{background-color:rgb(51, 153, 255); color: white;font-size: 20pt;}</string>
     </property>
     <property name="text">
      <string>主页</string>
