--- a/PM25-Sever/ExportData.ui
+++ b/PM25-Sever/ExportData.ui
@@ -13,6 +13,65 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget{font-size: 15pt;}</string>
+  </property>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>180</y>
+     <width>100</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>设备1</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>设备2</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>设备3</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>设备4</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>182</y>
+     <width>100</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设备选择：</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_export">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>270</y>
+     <width>141</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>导出</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
